[tool.poetry]
name = "agent-protocol-client"
version = "0.2.2"
description = "Agent Communication Protocol Client"
authors = ["e2b <hello@e2b.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://e2b.dev/"
repository = "https://github.com/e2b-dev/sdk/tree/main/agent_client/python/"
packages = [{ include = "agent_protocol_client" }]

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/e2b-dev/agent-protocol/issues"
