[tool.poetry]
name = "autogpt_server"
version = "0.1.0"
description = "An Agentic Experience"
authors = [
    "SwiftyOS <craig.swift@agpt.co>",
    "Nicholas Tindle <nicholas.tindle@agpt.co>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pydantic = "^2.7.2"
prisma = "^0.13.1"
pytest = "^8.2.1"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
fastapi = "^0.109.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.8"
flake8 = "^7.0.0"
jsonschema = "^4.22.0"


[tool.poetry.group.dev.dependencies]
cx-freeze = "7.0.0"
poethepoet = "^0.26.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "autogpt_server.app:main"

# https://poethepoet.natn.io/index.html
[tool.poe]
poetry_command = ""

# poetry run poe xxx
[tool.poe.tasks]
test = "pytest"
build = ["test", "_dbuild"]

# This might break your python install :)
install = ["build", "_dinstall"]

# https://cx-freeze.readthedocs.io/en/stable/index.html
[tool.poe.tasks._dbuild]
cmd = "python setup.py build"

[tool.poe.tasks.dist_mac]
cmd = "python setup.py bdist_mac"

[tool.poe.tasks.dist_dmg]
cmd = "python setup.py bdist_dmg"

[tool.poe.tasks.dist_msi]
cmd = "python setup.py bdist_msi"

[tool.poe.tasks._dinstall]
cmd = "python setup.py install"
