[tool.poetry]
name = "autogpt_server"
version = "0.1.0"
description = "An Agentic Experience"
authors = [
    "SwiftyOS <craig.swift@agpt.co>",
    "Nicholas Tindle <nicholas.tindle@agpt.co>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
agpt = { path = "../../autogpt", develop = true }
anthropic = "^0.25.1"
apscheduler = "^3.10.4"
autogpt-forge = { path = "../../forge", develop = true }
autogpt-libs = { path = "../autogpt_libs" }
click = "^8.1.7"
croniter = "^2.0.5"
discord-py = "^2.4.0"
expiringdict = "^1.2.2"
fastapi = "^0.109.0"
feedparser = "^6.0.11"
flake8 = "^7.0.0"
google-api-python-client = "^2.142.0"
google-auth-oauthlib = "^1.2.1"
groq = "^0.8.0"
jinja2 = "^3.1.4"
jsonref = "^1.1.0"
jsonschema = "^4.22.0"
ollama = "^0.3.0"
openai = "^1.35.7"
praw = "^7.7.1"
prisma = "^0.13.1"
psutil = "^5.9.8"
pydantic = "^2.7.2"
pydantic-settings = "^2.3.4"
pyro5 = "^5.15"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
python-dotenv = "^1.0.1"
tenacity = "^8.3.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
websockets = "^12.0"
youtube-transcript-api = "^0.6.2"

aio-pika = "^9.4.3"
redis = "^5.0.8"
sentry-sdk = "1.45.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
httpx = "^0.27.0"
pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.5.2"
pyright = "^1.1.371"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "autogpt_server.app:main"
rest = "autogpt_server.rest:main"
ws = "autogpt_server.ws:main"
cli = "autogpt_server.cli:main"
format = "linter:format"
lint = "linter:lint"
test = "run_tests:test"
# https://poethepoet.natn.io/index.html
[tool.poe]
poetry_command = ""

# poetry run poe xxx
[tool.poe.tasks]
test = "pytest"
build = ["test", "_dbuild"]

# This might break your python install :)
install = ["build", "_dinstall"]

# https://cx-freeze.readthedocs.io/en/stable/index.html
[tool.poe.tasks._dbuild]
cmd = "python setup.py build"

[tool.poe.tasks.dist_app]
cmd = "python setup.py bdist_app"

[tool.poe.tasks.dist_dmg]
cmd = "python setup.py bdist_dmg"

[tool.poe.tasks.dist_msi]
cmd = "python setup.py bdist_msi"

[tool.poe.tasks.dist_appimage]
cmd = "python setup.py bdist_appimage"

[tool.poe.tasks.dist_deb]
cmd = "python setup.py bdist_deb"

[tool.poe.tasks._dinstall]
cmd = "python setup.py install"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
