[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["SwiftyOS <craigswift13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.12.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.11.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.5.2"
pyright = "^1.1.371"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "linter:format"
lint = "linter:lint"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
