[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = [
  "SwiftyOS <craigswift13@gmail.com>",
  "Nicholas Tindle <spam@ntindle.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.13.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.3"
fastapi = "^0.109.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.11.0" }
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
# autogpt-server = { path = "../autogpt_server", develop = true }
prometheus-fastapi-instrumentator = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.5.2"
pyright = "^1.1.371"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "scripts:format"
lint = "scripts:lint"
app = "scripts:app"
setup = "scripts:setup"
populate = "scripts:populate_database"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
