[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogpt-local-executor"
version = "0.0.1.dev0"
description = "⚠️ EXPERIMENTAL: Local PC shim for the AutoGPT hosted platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["autogpt", "experimental", "local-executor"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "keyring>=25.0",
]

[project.optional-dependencies]
computer-use = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
]
hardware = [
    "pyserial>=3.5",
    "pyusb>=1.2",
]
local-llm = [
    "ollama>=0.2",
]
all = [
    "autogpt-local-executor[computer-use,hardware,local-llm]",
]

[project.scripts]
autogpt-shim = "autogpt_local_executor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autogpt_local_executor"]
