[tool.poetry]
name = "reddit-marketing"
version = "0.1.0"
description = "Reddit Marketing Agent"
authors = ["SwiftyOS <craigswift13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.34.0"
pydantic = "^2.7.4"
praw = "^7.7.1"
click = "^8.1.7"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
