[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_plugin_systeminfo"
version = "0.1.2"
authors = [
  { name="HDKiller", email="hdkiller@users.noreply.github.com" },
]
description = "System Info for Auto-GPT."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/hdkiller/Auto-GPT-SystemInfo"
"Bug Tracker" = "https://github.com/hdkiller/Auto-GPT-SystemInfo"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"